include/liblevenshtein_abi.h

/** One borrowed match descriptor inside a live cursor batch lease. */
typedef struct LlevMatch {
    const void* term_data; /**< Borrowed term bytes or aligned u64 tokens. */
    size_t term_len; /**< Logical unit count: scalars, bytes, or u64 tokens. */
    size_t byte_len; /**< Physical bytes addressed by term_data. */
    size_t distance; /**< Exact edit distance from the query. */
    uint64_t id; /**< Dictionary value when has_id is one. */
    VtUnitDomain unit_domain; /**< Encoding and alignment of term_data. */
    uint8_t has_id; /**< One when id is present, otherwise zero. */
    uint8_t reserved[3]; /**< Must be ignored; reserved for additive evolution. */
} LlevMatch;
/** Borrowed contiguous match lease returned by cursor advancement. */
typedef struct LlevMatchBatchView {
    const LlevMatch* matches; /**< Descriptor array valid until exact release. */
    size_t len; /**< Number of initialized descriptors. */
    uint64_t generation; /**< Nonzero identity required by release_batch. */
} LlevMatchBatchView;
/** Heap-owned, length-bearing UTF-8 returned by the phonetic-rule API. */
typedef struct LlevOwnedString {
    char* data; /**< Owned bytes, not necessarily NUL-terminated. */
    size_t len; /**< Number of initialized UTF-8 bytes. */
} LlevOwnedString;