bindings/haskell/src/VinaryTree/Liblevenshtein.hsc


queryText :: QueryOrder -> Transducer -> Text -> Int -> IO Cursor
queryText order value input maximum =
  queryBytesWith (\t p n m o out -> cQueryText t (castPtr p) n m o out)
    order value (Text.encodeUtf8 input) maximum
queryBytes :: QueryOrder -> Transducer -> ByteString -> Int -> IO Cursor
queryBytes = queryBytesWith cQueryBytes
queryU64 :: QueryOrder -> Transducer -> [Word64] -> Int -> IO Cursor
queryU64 order value input maximum
  | maximum < 0 = throwIO (userError "maximum distance must be non-negative")
  | otherwise = withTransducer value $ \native -> withArray input $ \tokens ->
      allocaBytes #{size void *} $ \output -> do
        cQueryU64 native tokens (fromIntegral (length input)) (fromIntegral maximum)
          (fromIntegral (fromEnum order)) output >>= check
        peekByteOff output 0 >>= newCursor

cachedQueryBytesWith :: (Ptr CQueryCache -> Ptr Word8 -> CSize -> CSize -> Word32
                       -> Ptr (Ptr CCursor) -> IO Status)
                     -> QueryOrder -> QueryCache -> ByteString -> Int -> IO Cursor
cachedQueryBytesWith action order value input maximum
  | maximum < 0 = throwIO (userError "maximum distance must be non-negative")
  | otherwise = withQueryCache value $ \native ->
      BSU.unsafeUseAsCStringLen input $ \(p, n) ->
        allocaBytes #{size void *} $ \output -> do
          action native (castPtr p) (fromIntegral n) (fromIntegral maximum)
            (fromIntegral (fromEnum order)) output >>= check
          peekByteOff output 0 >>= newCursor

cachedQueryText :: QueryOrder -> QueryCache -> Text -> Int -> IO Cursor
cachedQueryText order value input maximum =
  cachedQueryBytesWith
    (\cache p n m o out -> cCachedQueryText cache (castPtr p) n m o out)
    order value (Text.encodeUtf8 input) maximum

cachedQueryBytes :: QueryOrder -> QueryCache -> ByteString -> Int -> IO Cursor
cachedQueryBytes = cachedQueryBytesWith cCachedQueryBytes

cachedQueryU64 :: QueryOrder -> QueryCache -> [Word64] -> Int -> IO Cursor
cachedQueryU64 order value input maximum
  | maximum < 0 = throwIO (userError "maximum distance must be non-negative")
  | otherwise = withQueryCache value $ \native -> withArray input $ \tokens ->
      allocaBytes #{size void *} $ \output -> do
        cCachedQueryU64 native tokens (fromIntegral (length input))
          (fromIntegral maximum) (fromIntegral (fromEnum order)) output >>= check
        peekByteOff output 0 >>= newCursor

queryPattern :: Transducer -> PhoneticPattern -> Int -> IO Cursor
queryPattern value pattern maximum
  | maximum < 0 || maximum > 255 = throwIO (userError "pattern distance is outside u8")
  | otherwise = withTransducer value $ \native -> withPattern pattern $ \p ->
      allocaBytes #{size void *} $ \output -> do
        cQueryPattern native p (fromIntegral maximum) output >>= check
        peekByteOff output 0 >>= newCursor

closeCursor :: Cursor -> IO ()
closeCursor (Cursor value _) = finalizeForeignPtr value

peekMatch :: Ptr CMatch -> IO Match
peekMatch pointer = do
  domain <- #{peek LlevMatch, unit_domain} pointer :: IO Word32
  dataPointer <- #{peek LlevMatch, term_data} pointer :: IO (Ptr Word8)
  termLength <- #{peek LlevMatch, term_len} pointer :: IO CSize
  byteLength <- #{peek LlevMatch, byte_len} pointer :: IO CSize
  distance' <- #{peek LlevMatch, distance} pointer :: IO CSize
  identifier' <- #{peek LlevMatch, id} pointer :: IO Word64
  hasIdentifier <- #{peek LlevMatch, has_id} pointer :: IO Word8
  term' <- case domain of
    1 -> BytesTerm <$> BS.packCStringLen (castPtr dataPointer, fromIntegral byteLength)
    2 -> TextTerm . Text.decodeUtf8 <$> BS.packCStringLen
           (castPtr dataPointer, fromIntegral byteLength)
    _ -> TokensTerm <$> peekArray (fromIntegral termLength) (castPtr dataPointer)
  pure (Match term' (fromIntegral distance')
        (if hasIdentifier == 0 then Nothing else Just identifier'))

nextBatch :: Int -> Cursor -> IO (Maybe [Match])
nextBatch maximum cursor
  | maximum <= 0 = throwIO (userError "batch size must be positive")
  | otherwise = withCursor cursor $ \native -> allocaBytes #{size LlevMatchBatchView} $ \view -> do
      fillBytes view 0 #{size LlevMatchBatchView}
      status <- cNextBatch native (fromIntegral maximum) view
      if status == 1 then pure Nothing else do
        check status
        matches <- #{peek LlevMatchBatchView, matches} view :: IO (Ptr CMatch)
        count <- #{peek LlevMatchBatchView, len} view :: IO CSize
        generation <- #{peek LlevMatchBatchView, generation} view :: IO Word64
        let release = cReleaseBatch native generation >>= check
        values <- mapM (\index -> peekMatch
          (matches `plusPtr` (index * #{size LlevMatch}))) [0 .. fromIntegral count - 1]
          `onException` release
        release
        pure (Just values)

next :: Cursor -> IO (Maybe Match)
next cursor@(Cursor _ buffered) = do
  available <- atomicModifyIORef' buffered $ \values -> case values of
    [] -> ([], Nothing)
    item : rest -> (rest, Just item)
  case available of
    Just item -> pure (Just item)
    Nothing -> nextBatch 1 cursor >>= \case
      Nothing -> pure Nothing
      Just [] -> pure Nothing
      Just (item : rest) -> atomicModifyIORef' buffered (const (rest, ())) >> pure (Just item)

foldBatches :: Int -> Cursor -> state -> (state -> [Match] -> IO state) -> IO state
foldBatches maximum cursor = go
  where
    go state reducer = nextBatch maximum cursor >>= \case
      Nothing -> pure state
      Just values -> reducer state values >>= \nextState -> go nextState reducer

withUtf8 :: Text -> (Ptr CChar -> CSize -> IO a) -> IO a
withUtf8 input action = BSU.unsafeUseAsCStringLen (Text.encodeUtf8 input) $ \(p, n) ->
  action p (fromIntegral n)

compilePattern :: (Ptr CChar -> CSize -> Ptr (Ptr CPattern) -> IO Status)
               -> Text -> IO PhoneticPattern
compilePattern action source = withUtf8 source $ \p n ->
  allocaBytes #{size void *} $ \output -> do
    action p n output >>= check
    PhoneticPattern <$> (peekByteOff output 0 >>= newForeignPtr cPatternFree)
regexPattern, llrePattern :: Text -> IO PhoneticPattern
regexPattern = compilePattern cRegex
llrePattern = compilePattern cLlre
patternMatches :: PhoneticPattern -> Text -> IO Bool
patternMatches pattern input = withPattern pattern $ \native -> withUtf8 input $ \p n ->
  allocaBytes 1 $ \output -> cPatternMatches native p n output >>= check
    >> ((/= 0) <$> (peekByteOff output 0 :: IO Word8))
patternSize :: PhoneticPattern -> IO (Int, Int)
patternSize pattern = withPattern pattern $ \native ->
  allocaBytes #{size size_t} $ \states -> allocaBytes #{size size_t} $ \transitions -> do
    cPatternSize native states transitions >>= check
    (,) <$> (fromIntegral <$> (peekByteOff states 0 :: IO CSize))
        <*> (fromIntegral <$> (peekByteOff transitions 0 :: IO CSize))
closePattern :: PhoneticPattern -> IO ()
closePattern (PhoneticPattern value) = finalizeForeignPtr value

phoneticRules :: Text -> IO PhoneticRules
phoneticRules source = allocaBytes #{size void *} $ \output -> do
  status <- if source == "english-orthography" then cRulesBuiltin 0 output
            else if source == "english-phonetic" then cRulesBuiltin 1 output
            else withUtf8 source $ \p n -> cRulesParse p n output
  check status
  PhoneticRules <$> (peekByteOff output 0 >>= newForeignPtr cRulesFree)
rulesLength :: PhoneticRules -> IO Int
rulesLength rules = withRules rules $ \native -> allocaBytes #{size size_t} $ \output ->
  cRulesLength native output >>= check >> (fromIntegral <$> (peekByteOff output 0 :: IO CSize))
applyRules :: PhoneticRules -> Text -> IO Text
applyRules rules input = withRules rules $ \native -> withUtf8 input $ \p n ->
  allocaBytes #{size LlevOwnedString} $ \output -> do
    fillBytes output 0 #{size LlevOwnedString}
    cRulesApply native p n output >>= check
    dataPointer <- #{peek LlevOwnedString, data} output :: IO (Ptr CChar)
    length' <- #{peek LlevOwnedString, len} output :: IO CSize
    result <- Text.decodeUtf8 <$> BS.packCStringLen (dataPointer, fromIntegral length')
    cOwnedStringFree output
    pure result
closeRules :: PhoneticRules -> IO ()
closeRules (PhoneticRules value) = finalizeForeignPtr value

binaryDistance :: (Ptr CChar -> CSize -> Ptr CChar -> CSize -> IO CSize)
               -> Text -> Text -> IO Int
binaryDistance action source target = withUtf8 source $ \sp sn -> withUtf8 target $ \tp tn ->
  fromIntegral <$> action sp sn tp tn
thresholdDistance :: (Ptr CChar -> CSize -> Ptr CChar -> CSize -> CSize -> IO CSize)
                  -> Text -> Text -> Int -> IO Int
thresholdDistance action source target threshold
  | threshold < 0 = throwIO (userError "threshold must be non-negative")
  | otherwise = withUtf8 source $ \sp sn -> withUtf8 target $ \tp tn ->
      fromIntegral <$> action sp sn tp tn (fromIntegral threshold)
distance, damerauDistance, trueDamerauDistance :: Text -> Text -> IO Int
distance = binaryDistance cDistance
damerauDistance = binaryDistance cDamerau
trueDamerauDistance = binaryDistance cTrueDamerau
distanceThreshold, damerauDistanceThreshold, trueDamerauDistanceThreshold
  :: Text -> Text -> Int -> IO Int
distanceThreshold = thresholdDistance cDistanceThreshold
damerauDistanceThreshold = thresholdDistance cDamerauThreshold
trueDamerauDistanceThreshold = thresholdDistance cTrueDamerauThreshold
